--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-#wrapper {
-    margin-left:auto;
-    margin-right:auto;
-    min-width:501px;
-}
-
 @font-face {
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 	font-family: 'Roboto', sans-serif;
@@ -21,6 +15,7 @@
 	.body { width: 90%; order: 3; }
 	.projects_container { width: 100%; order: 4; }
 }
+	
 	a:-webkit-any-link{
 		text-decoration:none !important;
 	}
@@ -28,6 +23,11 @@
 	img[Attributes Style] {
 		width: 90%;
 		height: 90%;
+	}
+	.wrapper {
+  	margin-left: auto;
+  	margin-right: auto;
+  	min-width: 501px;
 	}
 	.header_container {
 		min-width: 50%;
@@ -44,6 +44,9 @@
 	}
 	.logo {
 	width: 50%;
+	width: 100px;
+	height: 100px;
+	float: right;
 	}
 	.body {
 		min-height: 80px;
