--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,104 @@
 @font-face {
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
-	font-family: 'Roboto', sans-serif;
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">font-family: 'Roboto', sans-serif;
 }
 @media (max-width: device-width) and (min-width: 0px) {
-  @viewport {
-    width: 500px;
-  }
+	@viewport {
+		width: 500px;
+	}
 }
-
 @media screen and (min-width: 500px) {
-	.header_container { width: 90%; order: 0; }
-	.logo { width: 50%; order: 2; }
-	.header_title { width:50% order: 1; }
-	.body { width: 90%; order: 3; }
-	.projects_container { width: 100%; order: 4; }
-}
-	
-	a:-webkit-any-link{
-		text-decoration:none !important;
-	}
-	
-	img[Attributes Style] {
-		width: 90%;
-		height: 90%;
-	}
-	.wrapper {
-  	margin-left: auto;
-  	margin-right: auto;
-  	min-width: 501px;
-	}
 	.header_container {
-		min-width: 50%;
-		margin-top: 5%;
-		margin-right: 5%;
-		margin-left: 5%;
-		box-shadow: 0 3px 0 #7d97ad;
-		display: flex;
-		flex-wrap: wrap;
-	}
-	.header_title {
-		min-width: 50%;
-		font-family: 'Roboto', sans-serif;
+		width: 90%;
+		order: 0;
 	}
 	.logo {
-	width: 50%;
-	width: 100px;
-	height: 100px;
-	float: right;
+		width: 50%;
+		order: 2;
+	}
+	.header_title {
+		width: 50% order: 1;
 	}
 	.body {
-		min-height: 80px;
-		margin-top: 3.3%;
-		margin-right: 5%;
-		margin-left: 5%;
-		max-width: 100%;
-		font-family: 'Roboto', sans-serif;
-		display: flex;
-		flex-wrap: wrap;
-	}
-	
-	figure figcaption {
-    	text-align: center;
+		width: 90%;
+		order: 3;
 	}
 	.projects_container {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
+		width: 100%;
+		order: 4;
 	}
-	.body_title {
-		color: #7d97ad;
-		font-family: 'Roboto', sans-serif;
-    font-weight: 100;
+}
+a:-webkit-any-link {
+	text-decoration: none !important;
+}
+img[Attributes Style] {
+	width: 90%;
+	height: 90%;
+}
+.wrapper {
+	margin-left: auto;
+	margin-right: auto;
+	min-width: 501px;
+}
+.header_container {
+	min-width: 50%;
+	margin-top: 5%;
+	margin-right: 5%;
+	margin-left: 5%;
+	box-shadow: 0 3px 0 #7d97ad;
+	display: flex;
+	flex-wrap: wrap;
+}
+.header_title {
+	min-width: 50%;
+	font-family: 'Roboto', sans-serif;
+}
+.logo img {
+	max-height: 100px;
+	float: right;
+}
+.body {
+	min-height: 80px;
+	margin-top: 3.3%;
+	margin-right: 5%;
+	margin-left: 5%;
+	max-width: 100%;
+	font-family: 'Roboto', sans-serif;
+	display: flex;
+	flex-wrap: wrap;
+}
+.projects_container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.body_title {
+	color: #7d97ad;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+}
+.project {
+	width: auto;
+	max-width: 100%;
+	font-family: 'Roboto', sans-serif;
+	hover {
+		cursor: pointer;
 	}
-	.project {
-		width: auto;
-    max-width: 100%;
-		font-family: 'Roboto', sans-serif;
-		hover{cursor: pointer;}
-	}
-	.img {
-		width:auto;
-		height:auto;
-	}
- 
-  h1,h2 { font-weight: 100 !important; }
-
-  figure {
-    display: inline-block;
-    margin: 20px; /* adjust as needed */
-  }
-  figure img {
-    vertical-align: top;
-  }
-  figure figcaption {
-    text-align: center;
-  }
+}
+.project img {
+	position: relative;
+	max-width: 110px;
+	display: table-cell;
+	vertical-align: middle;
+}
+.img {
+	width: auto;
+	height: auto;
+}
+h1, h2 {
+	font-weight: 100 !important;
+}
+figure {
+	display: inline-block;
+	margin: 20px;
+	/* adjust as needed */
+}
