--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,4 @@
-@font-face {
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">font-family: 'Roboto', sans-serif;
-}
-@media (max-width: device-width) and (min-width: 0px) {
-	@viewport {
-		width: 500px;
-	}
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400');
 @media screen and (min-width: 500px) {
 	.header_container {
 		width: 90%;
@@ -16,7 +9,8 @@
 		order: 2;
 	}
 	.header_title {
-		width: 50% order: 1;
+		width: 50%; 
+    order: 1;
 	}
 	.body {
 		width: 90%;
@@ -65,6 +59,9 @@ img[Attributes Style] {
 	font-family: 'Roboto', sans-serif;
 	display: flex;
 	flex-wrap: wrap;
+}
+.body img {
+  width: 100%;
 }
 .projects_container {
 	display: flex;
